Fix tip accessibility + closing bug + code readability + doc
HFP-1034

--- a/css/joubel-tip.css
+++ b/css/joubel-tip.css
@@ -1,5 +1,3 @@
-@CHARSET "UTF-8";
-
 .joubel-tip-container {
   display: inline-block;
   font-weight: normal;
@@ -39,4 +37,8 @@
 .joubel-tip-icon.help-icon:before {
   font-family: 'H5PFontAwesome4';
   content: "\f059";
+}
+
+.joubel-tip-container * {
+  pointer-events: none;
 }
